# curses_cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: user-test.yml
cmake/: CursesCppCompilerWarnings.cmake  CursesCppForceEnableAsserts.cmake  CursesCppOutputDirectories.cmake
docs/: CMakeLists.txt  main.dox
examples/: CMakeLists.txt
examples/src/: CMakeLists.txt  hanoi.cpp  hello.cpp  minimal.cpp  mouse.cpp
src/: CMakeLists.txt
src/curses_cpp/: CursesCppConfig.cmake.in  curses.cpp  curses.hpp  version.hpp
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  dummy.cpp  event_listeners.cpp  test_curs_addch.cpp  test_curs_addchstr.cpp  test_curs_addstr.cpp  test_curs_attr.cpp  test_curs_bkgd.cpp  test_curs_color.cpp  test_curs_deleteln.cpp  test_curs_getch.cpp  test_curs_getstr.cpp  test_curs_getyx.cpp  test_curs_inch.cpp  test_curs_inchstr.cpp  test_curs_initscr.cpp  test_curs_inopts.cpp  test_curs_insch.cpp  test_curs_insstr.cpp  test_curs_instr.cpp  test_curs_mouse.cpp  test_curs_move.cpp  test_curs_opaque.cpp  test_curs_outopts.cpp  test_curs_overlay.cpp  test_curs_scroll.cpp  test_curs_touch.cpp  test_curs_window.cpp  test_type_attr.cpp  test_type_chtype.cpp  test_type_color.cpp  test_type_key.cpp  test_type_mouse_mask.cpp  test_type_result.cpp  test_type_window.cpp
tools/: user_test.cmake
